<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_control</name>
  <version>0.0.0</version>
  <description>夹爪控制与触觉传感器接口功能包</description>
  <maintainer email="ztb@example.com">ztb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <build_depend>libmodbus-dev</build_depend>
  <exec_depend>libmodbus5</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>ament_cmake_cpplint</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

